--- a/.github/workflows/Dockerfile_test_bundle.yml
+++ b/.github/workflows/Dockerfile_test_bundle.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
       - name: Get Hash
         id: hash
-        run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_HASH
+        run: echo "GITHUB_SHA_SHORT=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
       - name: build docker
         run: docker build -t telegraher-${{ env.AARCH }} -f Dockerfile_${{ env.AARCH }} .
       - name: build app
@@ -33,8 +33,8 @@ jobs:
           draft: false
           prerelease: false
           release_name: ${{ env.RNAME }} (${{ env.AARCH }})
-          tag_name: ${{ env.TNAME }}${{ env.hash }}_${{ env.AARCH }}
-          body: BETA Bundle (`arm64_v8a`/`armeabi_v7a`/`x86`/`x86_64`) ${{ env.ANAME }}_${{ env.hash }}_${{ env.AARCH }}.apk (sha256 `${{ steps.sha256_basic.outputs.SHA256BASIC }}`)
+          tag_name: ${{ env.TNAME }}${{ env.GITHUB_SHA_SHORT }}_${{ env.AARCH }}
+          body: BETA Bundle (`arm64_v8a`/`armeabi_v7a`/`x86`/`x86_64`) ${{ env.ANAME }}_${{ env.GITHUB_SHA_SHORT }}_${{ env.AARCH }}.apk (sha256 `${{ steps.sha256_basic.outputs.SHA256BASIC }}`)
         env:
           GITHUB_TOKEN: ${{ github.token }}
       - name: upload apk basic
@@ -44,7 +44,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./TMessagesProj/build/outputs/apk/${{ env.AARCH }}/release/app.apk
-          asset_name: ${{ env.ANAME }}_${{ env.hash }}_${{ env.AARCH }}.apk
+          asset_name: ${{ env.ANAME }}_${{ env.GITHUB_SHA_SHORT }}_${{ env.AARCH }}.apk
           asset_content_type: application/gzip
     env:
       RNAME: Telegraher
