--- a/.github/workflows/Dockerfile_test_bundle.yml
+++ b/.github/workflows/Dockerfile_test_bundle.yml
@@ -11,6 +11,7 @@ jobs:
   build_release:
     name: build_release
     runs-on: ubuntu-22.04
+    environment: graherkeys
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -22,7 +23,7 @@ jobs:
       - name: build docker
         run: docker build -t telegraher-${{ env.AARCH }} -f Dockerfile_${{ env.AARCH }} .
       - name: build app
-        run: docker run --rm -v "$PWD":/home/source telegraher-${{ env.AARCH }}
+        run: docker run -e GRAHER_KEYSTORE_BASE64=${{ secrets.GRAHER_KEYSTORE_BASE64 }} -e GRAHER_RELEASE_STORE_PASSWORD=${{ secrets.GRAHER_RELEASE_STORE_PASSWORD }} -e GRAHER_RELEASE_KEY_ALIAS=${{ secrets.GRAHER_RELEASE_KEY_ALIAS }} -e GRAHER_RELEASE_KEY_PASSWORD=${{ secrets.GRAHER_RELEASE_KEY_PASSWORD }} --rm -v "$PWD":/home/source telegraher-${{ env.AARCH }}
       - name: sha256 basic apk
         run: echo "::set-output name=SHA256BASIC::$(sha256sum ./TMessagesProj/build/outputs/apk/${{ env.AARCH }}/release/app.apk|head -c 64)"
         id: sha256_basic
@@ -34,7 +35,7 @@ jobs:
           prerelease: false
           release_name: ${{ env.RNAME }} (${{ env.AARCH }})
           tag_name: ${{ env.TNAME }}${{ env.GITHUB_SHA_SHORT }}_${{ env.AARCH }}
-          body: BETA Bundle (`arm64_v8a`/`armeabi_v7a`/`x86`/`x86_64`) ${{ env.ANAME }}_${{ env.GITHUB_SHA_SHORT }}_${{ env.AARCH }}.apk (sha256 `${{ steps.sha256_basic.outputs.SHA256BASIC }}`)
+          body: Bundle (`arm64_v8a`/`armeabi_v7a`/`x86`/`x86_64`) ${{ env.ANAME }}_${{ env.GITHUB_SHA_SHORT }}_${{ env.AARCH }}.apk (sha256 `${{ steps.sha256_basic.outputs.SHA256BASIC }}`)
         env:
           GITHUB_TOKEN: ${{ github.token }}
       - name: upload apk basic
